Dejando solo los CSSs buenos

--- a/preso/index.html
+++ b/preso/index.html
@@ -33,10 +33,10 @@
 
 <section><pre><code>>>> type(3)
 type(3)
-<class 'int'>
+&lt;class 'int'>
 >>> type(5.2)
 type(5.2)
-<class 'float'>
+&lt;class 'float'>
 </code></pre></section>
 
 <section><pre><code>>>> 800//33
@@ -46,10 +46,10 @@ type(5.2)
 
 <section><pre><code>>>> type(800/20)
 type(800/20)
-<class 'float'>
+&lt;class 'float'>
 >>> type(800//20)
 type(800//20)
-<class 'int'>
+&lt;class 'int'>
 >>> 800/20
 800/20
 40.0
@@ -60,10 +60,10 @@ type(800//20)
 
 <section><pre><code>>>> type(333)
 type(333)
-<class 'int'>
+&lt;class 'int'>
 >>> type(333.)
 type(333.)
-<class 'float'>
+&lt;class 'float'>
 </code></pre></section>
 
 <section><pre><code>>>> 5*(3**2 + 2**3)
@@ -92,7 +92,7 @@ _ + " y Loki el mentiroso ❄"
 
 <section><pre><code>>>> type(True)
 type(True)
-<class 'bool'>
+&lt;class 'bool'>
 </code></pre></section>
 
 <section><pre><code>not(3)
@@ -258,7 +258,7 @@ list(map( cifras_de, potencias_de_2 ))
 
 <section><pre><code>potencias_de_2=(2,4,8,16,32)
 type(potencias_de_2)
-<class 'tuple'>
+&lt;class 'tuple'>
 </code></pre></section>
 
 <section><pre><code>potencias_de_2.insert(64)
