Terminadas transpas del primer día

--- a/preso/index.html
+++ b/preso/index.html
@@ -74,6 +74,13 @@ type(333.)
 <section><pre><code>5*3**2 + 2**3
 </code></pre></section>
 
+<section data-markdown>
+  <textarea data-template>## Ejercicio:
+> Usando `_` para recordar el valor anterior y ↑ para
+> repetir la última orden en el intérprete, ir calculando una docena o
+> más de valores de una progresión
+> aritmética o geométrica.
+
 <section><pre><code>>>> len(_)
 len(_)
 17
@@ -174,6 +181,11 @@ True
 False
 </code></pre></section>
 
+<section><h1>Pensamiento computacional</h1>
+  <h2 class='fragment'>Descomposición</h2>
+  <h2 class='fragment'>Reconocimiento de patrones</h2>
+  <h2 class='fragment'>Abstracción</h2>
+</section>
 
 <section><pre><code>>>> 3+0.1j
 3+0.1j
@@ -183,7 +195,20 @@ _**2
 (8.99+0.6000000000000001j)
 </code></pre></section>
 
-<section><pre><code>>>>1+3.14j 
+<section data-markdown>
+  <textarea data-template>## Ejercicio
+> Usar sólo números 5 para reconstruir los números del 0
+> al 5. Si queda tiempo, hacerlo hasta el 10. </textarea></section>
+
+<section data-markdown>
+  <textarea data-template>## Ejercicio
+>¿Para qué números se pueden usar más o menos los mismos
+> patrones que para el 5? ¿Funciona con el 4? ¿Funciona con el 6?
+> Específicamente, ¿con qué resultados hay que hacer pequeños cambios
+> para que funcione?</textarea></section>
+
+
+    <section><pre><code>>>>1+3.14j 
 
 >>> _*(1+3.14j)
 _*(1+3.14j)
@@ -219,10 +244,9 @@ _*(1+3.14j)
 40
 </code></pre></section>
 
-<section><pre><code>Lua
-> (8+32) >> 1
-20
-</code></pre></section>
+<section data-markdown>
+	<textarea data-template>>Usando `xor`, comprobar si dos números enteros tienen el
+> mismo signo. </textarea></section>
 
 <section><pre><code>(lambda dato: dato*dato)(3+4j)
 (-7+24j)
