--- a/preso/index.html
+++ b/preso/index.html
@@ -79,7 +79,7 @@ type(333.)
 > Usando `_` para recordar el valor anterior y ↑ para
 > repetir la última orden en el intérprete, ir calculando una docena o
 > más de valores de una progresión
-> aritmética o geométrica.
+> aritmética o geométrica.</textarea></section>
 
 <section><pre><code>>>> len(_)
 len(_)
@@ -209,20 +209,13 @@ _**2
 
 
     <section><pre><code>>>>1+3.14j 
-
 >>> _*(1+3.14j)
 _*(1+3.14j)
 (3.141592653589793+9.864600932271951j)
 >>> _*(1+3.14j)
 _*(1+3.14j)
 (-27.833254273744135+19.729201864543903j)
->>> _*(1+3.14j)
-_*(1+3.14j)
-(-89.78294812841199-67.66721655501269j)
->>> _*(1+3.14j)
-_*(1+3.14j)
-(122.69211185432786-349.5856736782264j)
-</code></pre></section>
+...</code></pre></section>
 
 <section><pre><code>33 & 1
 1
@@ -245,7 +238,9 @@ _*(1+3.14j)
 </code></pre></section>
 
 <section data-markdown>
-	<textarea data-template>>Usando `xor`, comprobar si dos números enteros tienen el
+  <textarea data-template>## Ejercicio
+
+>Usando `xor`, comprobar si dos números enteros tienen el
 > mismo signo. </textarea></section>
 
 <section><pre><code>(lambda dato: dato*dato)(3+4j)
@@ -287,11 +282,6 @@ _*(1+3.14j)
 
 <section><pre><code>list(map(len,['●●●', '●●●●●●●●●●●●●●●', '●●', '●●●●●●●', '●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●'])
 [3, 15, 2, 7, 33]
-</code></pre></section>
-
-<section><pre><code>Haskell
-map (\rep -> concat $ replicate rep "#") [3,2,1]
-["###","##","#"]
 </code></pre></section>
 
 <section><pre><code>cifras_de = lambda numero: len(str(numero))
