--- a/preso/index.html
+++ b/preso/index.html
@@ -181,6 +181,27 @@ True
 False
 </code></pre></section>
 
+<section data-markdown>
+  <textarea data-template>## Ejercicio
+> probar, usando todos los casos posibles,
+> las
+> [leyes de De Morgan](https://es.wikipedia.org/wiki/Leyes_de_De_Morgan). ¿Cuál
+> sería el *modo Python* de expresar una expresión de ese
+  estilo?</textarea></section>
+
+<section>
+  <section><h1>NAND = Not AND</h1>
+    
+    <code><pre>a NAND b == not (a and b)</pre></code>
+    
+  </section>
+  <section data-markdown>
+    <textarea data-template>## Ejercicio
+> expresar `and`, `or` y `not` usando sólo NAND y probar
+> exhaustivamente, usando valores de True y False, que es
+  así.</textarea></section>
+</section>
+
 <section><h1>Pensamiento computacional</h1>
   <h2 class='fragment'>Descomposición</h2>
   <h2 class='fragment'>Reconocimiento de patrones</h2>
