--- a/preso/index.html
+++ b/preso/index.html
@@ -296,6 +296,12 @@ _*(1+3.14j)
 [0, 11, 22, 33, 44, 55, 66, 77, 88, 99]
 </code></pre></section>
 
+<section data-markdown>
+  <textarea data-template>## Ejercicio
+> Listar todos los números que sean potencia de dos entre
+>los 1000 primeros números. ¿Se puede usar una técnica parecida para
+>las potencias de tres? </textarea></section>
+
 <section><pre><code>list(map( lambda num: num*"●", [3,15,2,7,33]))
 ['●●●', '●●●●●●●●●●●●●●●', '●●', '●●●●●●●',
 '●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●']
@@ -304,6 +310,11 @@ _*(1+3.14j)
 <section><pre><code>list(map(len,['●●●', '●●●●●●●●●●●●●●●', '●●', '●●●●●●●', '●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●'])
 [3, 15, 2, 7, 33]
 </code></pre></section>
+
+<section data-markdown>
+  <textarea data-template>## Ejercicio
+>*Representar* de forma gráfica (usando caracteres) el
+> logaritmo de las 20 primeras potencias de dos. </textarea></section>
 
 <section><pre><code>cifras_de = lambda numero: len(str(numero))
 potencias_de_2 = map( lambda num: 2**num, range(20))
