--- a/preso/index.html
+++ b/preso/index.html
@@ -420,8 +420,8 @@ def is_multiple_of_3(n): sum = suma_cifras(n); return is_multiple_of_3(sum) if (
     <pre><code>def fib(n) {n<2 ? 1 : fib(n-1)+fib(n-2)}</code></pre>
 
     <aside class='notes'>Está en Groovy, pero la idea es compacta y
-      está más o menos clara.</aside><
-    /section>
+      está más o menos clara.</aside>
+  </section>
 
   <section data-markdown>
     <textarea data-template>## Ejercicio
@@ -434,6 +434,14 @@ def is_multiple_of_3(n): sum = suma_cifras(n); return is_multiple_of_3(sum) if (
          'mano'      : ['5♠','Q♣','8♥'], 
 		 'estrategia': lambda mano: min(mano) } 
 </code></pre></section>
+
+<section data-markdown>
+  <textarea data-template>## Ejercicio
+
+> Subir a gist.github.com alguno de los ejercicios creados
+>anteriormente, usando comentarios para explicarlo. Difundirlo también
+>por Twitter, con la etiqueta #1linepy,
+>enlazándolo.</textarea></section>
 
 <section><pre><code>juego.items()
 dict_items([('jugador', 'Johnny'), ('mano', ['5♠', 'Q♣', '8♥']), ('estrategia', <function <lambda> at 0x7fcd3e298a60>)])
