--- a/preso/index.html
+++ b/preso/index.html
@@ -32,7 +32,7 @@
 		      <section><pre><code>apm install Repl
 		      </code></pre></section>
 
-		      <section><h1>REPL pythónico</h1></section>
+		      <section><h1>REPL pythónico</h1>
 			<pre><code>bash$ python3</code></pre></section>
 		    </section>
 
