Cambios on the fly

--- a/preso/index.html
+++ b/preso/index.html
@@ -158,7 +158,7 @@ True
 False
 </code></pre></section>
 
-<section> data-markdown>
+<section data-markdown>
 	<textarea data-template>## Ejercicio
 > Escribe una expresión
 >que sea cierta (es decir, sea `True`) si un número está en un
