--- a/preso/index.html
+++ b/preso/index.html
@@ -135,7 +135,7 @@ True
 	<textarea data-template>## Ejercicio
 > Se dice que una fórmula es ["satisfacible"](https://es.wikipedia.org/wiki/Problema_de_satisfacibilidad_booleana) si es
 >verdadera al menos para una combinación de valores. Con una fórmula
->de 3 variables, ¿cuantas combinaciones posibles de valores hay?
+>de 3 variables, ¿cuántas combinaciones posibles de valores hay?
 >Diseña una fórmula y pruébala sistemáticamente hasta que encuentres
 >si es satisfacible o no. Altérala y vuelve a probar.</textarea>
 </section>
@@ -512,7 +512,7 @@ reduce( cuenta_pares, aleatorios, [0,0])
 
 >Si habéis ejecutado el generador de números aleatorios
 > de arriba, habréis visto que rara vez el resultado es exactamente la
-> mitad de cada uno. ¿Cuanta desviación hay? Realizar una función que
+> mitad de cada uno. ¿Cuánta desviación hay? Realizar una función que
 > contabilice la desviación del generador de números aleatorios. </textarea></section>
 
 			</div>
